k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlists
spec:
  selector:
    app: wishlists
  ports:
    - protocol: TCP
      port: 8080     # external port exposed to ingress
      targetPort: 8080  # internal container port
